02_01_podaffinity.yaml
apiVersion: v1
kind: Pod
metadata:
  name: with-pod-affinity-01
  namespace: cka
spec:
  affinity:
    podAffinity:
      requiredDuringSchedulingIgnoredDuringExecution:
      - labelSelector:
          matchExpressions:
          - key: security
            operator: In
            values:
            - S1
        topologyKey: kubernetes.io/hostname
  containers:
  - image: k8s.gcr.io/pause:2.0
    name: with-pod-affinity-01
