04_01_pod-with-scratch-pv.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: 2018-07-12T14:19:26Z
  name: redis
  namespace: default
  resourceVersion: "25089096"
  selfLink: /api/v1/namespaces/default/pods/redis
  uid: 951cc4c5-85de-11e8-88ba-067b1eba04a8
spec:
  containers:
  - image: redis
    imagePullPolicy: Always
    name: redis
    resources: {}
    terminationMessagePath: /dev/termination-log
    terminationMessagePolicy: File
    volumeMounts:
    - mountPath: /data/redis
      name: redis-storage
    - mountPath: /var/run/secrets/kubernetes.io/serviceaccount
      name: default-token-lvxw6
      readOnly: true
  dnsPolicy: ClusterFirst
  priority: 0
  restartPolicy: Always
  schedulerName: default-scheduler
  securityContext: {}
  serviceAccount: default
  serviceAccountName: default
  terminationGracePeriodSeconds: 30
  tolerations:
  - effect: NoExecute
    key: node.kubernetes.io/not-ready
    operator: Exists
    tolerationSeconds: 300
  - effect: NoExecute
    key: node.kubernetes.io/unreachable
    operator: Exists
    tolerationSeconds: 300
  volumes:
  - emptyDir: {}
    name: redis-storage
  - name: default-token-lvxw6
    secret:
      defaultMode: 420
      secretName: default-token-lvxw6
status:
  phase: Pending
  qosClass: BestEffort
