init-container.yaml
# Run kubectl exec -it init-demo -- /bin/bash to check the test.txt
apiVersion: v1
kind: Pod
metadata:
  name: init-demo
spec:
  containers:
  - name: nginx
    image: nginx:1.13
    volumeMounts:
    - name: path
      mountPath: /tmp/init
  volumes:
  - name: path
    emptyDir: {}
