init_container.yaml
apiVersion: v1
kind: Pod
metadata:
  name: redis
  namespace: default
spec:
  containers:
  - image: nginx
    name: nginx
    volumeMounts:
    - mountPath: /tmp/test
      name: path
  volumes:
  - emptyDir: {}
    name: path
