multi-container-web-redis.yaml
apiVersion: v1
kind: Pod
metadata:
  name: multi-cpntainer
  labels:
    name: nginx-redis
spec:
  containers:
  - name: nginx
    image: nginx
    ports:
      - containerPort: 80
  - name: redis
    image: redis
    ports:
      - containerPort: 6379
