pod-with-secrete-env-var.yaml
apiVersion: v1
kind: Pod
metadata:
  name: secrete-env-var-demo
spec:
  containers:
  - name: secrete-env-var-demo
    image: redis
