pod-with-secrete-volume.yaml
apiVersion: v1
kind: Pod
metadata:
  name: secrete-volume-demo
spec:
  containers:
  - name: secrete-volume-demo
    image: redis
    volumeMounts:
    - name: foo
      mountPath: "/etc/foo"
      readOnly: true
  volumes:
  - name: foo
    secret:
      secretName: mysecret
