pv_emptydir.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    run: redis
  name: redis
spec:
  replicas: 1
  selector:
    matchLabels:
      run: redis
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        run: redis
    spec:
      containers:
      - image: redis
        name: redis
        resources: {}
        volumeMounts:
        - name: data
          path: /tmp
      volumes:
      - name: data
        emptyDir: {}
status: {}
