runas.yaml
apiVersion: v1
kind: Pod
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"v1","kind":"Pod","metadata":{"annotations":{},"name":"security-context-demo","namespace":"default"},"spec":{"containers":[{"image":"gcr.io/google-samples/node-hello:1.0","name":"sec-ctx-demo","securityContext":{"allowPrivilegeEscalation":false},"volumeMounts":[{"mountPath":"/data/demo","name":"sec-ctx-vol"}]}],"securityContext":{"fsGroup":2000,"runAsUser":1000},"volumes":[{"emptyDir":{},"name":"sec-ctx-vol"}]}}
  name: security-context-demo
  namespace: default
spec:
  containers:
  - image: gcr.io/google-samples/node-hello:1.0
    name: sec-ctx-demo
    securityContext:
      allowPrivilegeEscalation: false
    volumeMounts:
    - mountPath: /data/demo
      name: sec-ctx-vol
  securityContext:
    runAsUser: 1000
  volumes:
  - emptyDir: {}
    name: sec-ctx-vol
