secrete_volume.yaml
apiVersion: v1
kind: Pod
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"v1","kind":"Pod","metadata":{"annotations":{},"name":"secret-test-pod","namespace":"cka"},"spec":{"containers":[{"image":"nginx","name":"test-container","volumeMounts":[{"mountPath":"/etc/secret-volume","name":"secret-volume"}]}],"volumes":[{"name":"secret-volume","secret":{"secretName":"test-secret"}}]}}
  name: secret-test-pod
  namespace: cka
spec:
  containers:
  - image: nginx
    name: test-container
    volumeMounts:
    - mountPath: /etc/secret-volume
      name: secret-volume
  volumes:
  - name: secret-volume
    secret:
      secretName: my-secret
