service-no-selector.yaml
kind: Service 
apiVersion: v1 
metadata:
  name: my-service 
spec:
  ports:
    - protocol: TCP 
      port: 80  
      targetPort: 9376
