network_policy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: access-nginx-network
spec:
  podSelector:
    matchLabels:
      run: ngnix-network
  ingress:
  - from:
    - podSelector:
        matchLabels:
          access: "granted"
